# rust-playground

belajar_trait/: Cargo.toml
belajar_trait/src/: main.rs
database/: .env  Cargo.toml
database/src/: .main.rs.swp  database.rs  main.rs
database/src/entity/: book.rs  mod.rs
database/src/repository/: .book_repository.rs.swp  book_repository.rs  mod.rs
object/src/: main.rs
object/src/entity/: .newperson.rs  .person.rs.swp  mod.rs  newperson.rs
