[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio" ] }
sqlx-mysql = "0.7.2"
tokio = { version = "1.20.0", features = ["rt", "macros"]}
